modified genre cache
